made it prettier

--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Article</h1>
+<div class="container mt-4">
+  <h1>New Article</h1>
 
-<%= render 'form', article: @article %>
+  <%= render 'form', article: @article %>
 
-<%= link_to 'Back to Articles', articles_path, class: 'btn btn-secondary' %>
+  <%= link_to 'Back to Articles', articles_path, class: 'btn btn-secondary' %>
+</div>
