--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_with model: article, local: true do |form| %>
   <% if article.errors.any? %>
-    <div id="error_explanation">
+    <div class="alert alert-danger">
       <h2><%= pluralize(article.errors.count, 'error') %> prohibited this article from being saved:</h2>
       <ul>
         <% article.errors.full_messages.each do |message| %>
@@ -10,17 +10,17 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= form.label :title %>
+  <div class="mb-3">
+    <%= form.label :title, class: 'form-label' %>
     <%= form.text_field :title, class: 'form-control' %>
   </div>
 
-  <div class="field">
-    <%= form.label :content %>
+  <div class="mb-3">
+    <%= form.label :content, class: 'form-label' %>
     <%= form.text_area :content, class: 'form-control' %>
   </div>
 
-  <div class="actions">
+  <div class="mb-3">
     <%= form.submit class: 'btn btn-primary' %>
   </div>
 <% end %>
