--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,6 +1,10 @@
-<h1>Edit Article</h1>
+<div class="container mt-4">
+  <h1>Edit Article</h1>
 
-<%= render 'form', article: @article %>
+  <%= render 'form', article: @article %>
 
-<%= link_to 'Show', article_path(@article), class: 'btn btn-primary' %>
-<%= link_to 'Back to Articles', articles_path, class: 'btn btn-secondary' %>
+  <div class="btn-group">
+    <%= link_to 'Show', article_path(@article), class: 'btn btn-primary' %>
+    <%= link_to 'Back to Articles', articles_path, class: 'btn btn-secondary' %>
+  </div>
+</div>
