--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,10 +1,14 @@
-<h1>All Articles</h1>
+<div class="container mt-4">
+  <h1 class="mb-4">All Articles</h1>
 
-<% @articles.each do |article| %>
-  <div>
-    <h3><%= link_to article.title, article %></h3>
-    <p><%= truncate(article.content, length: 200) %></p>
-  </div>
-<% end %>
+  <% @articles.each do |article| %>
+    <div class="card mb-4">
+      <div class="card-body">
+        <h3 class="card-title"><%= link_to article.title, article %></h3>
+        <p class="card-text"><%= truncate(article.content, length: 200) %></p>
+      </div>
+    </div>
+  <% end %>
 
-<%= link_to 'New Article', new_article_path, class: 'btn btn-primary' %>
+  <%= link_to 'New Article', new_article_path, class: 'btn btn-primary' %>
+</div>
