--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,5 +1,9 @@
-<h1><%= @article.title %></h1>
-<p><%= @article.content %></p>
+<div class="container mt-4">
+  <h1><%= @article.title %></h1>
+  <p><%= @article.content %></p>
 
-<%= link_to 'Edit', edit_article_path(@article), class: 'btn btn-warning' %>
-<%= link_to 'Back to Articles', articles_path, class: 'btn btn-secondary' %>
+  <div class="btn-group">
+    <%= link_to 'Edit', edit_article_path(@article), class: 'btn btn-warning' %>
+    <%= link_to 'Back to Articles', articles_path, class: 'btn btn-secondary' %>
+  </div>
+</div>
